fix: 增加获取流程预设表达式获取，jdk修改到8